# cortex

./: .gitignore  AGENTS.md  LICENSE  README.md
cortex-core/: Cargo.toml
cortex-core/src/: db.rs  decision.rs  diff.rs  error.rs  lib.rs  query.rs
cortex-py/: README.md  pyproject.toml
cortex-py/cortex/: __init__.py  cli.py  db.py  decision.py  diff.py  query.py
cortex-py/tests/: test_cortex.py
