[package]
name = "cortex_core"
version = "0.1.0"
edition = "2021"
description = "SQLite for AI Agents - A single-file database that records agent reasoning"
license = "Apache-2.0"
repository = "https://github.com/overthought-labs/cortex"
keywords = ["ai", "agents", "database", "sqlite", "debugging"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"
